Basically start again with new tools

--- a/src/client/templates/index.ejs
+++ b/src/client/templates/index.ejs
@@ -3,6 +3,43 @@
     <head>
         <meta charset="UTF-8">
         <title><%= htmlWebpackPlugin.options.title %></title>
+        <link rel="stylesheet" href="vendorStyles/fontAwesome.min.css" type="text/css">
+        <style>
+            @font-face {
+              font-family: Raleway;
+              src: url('font/Raleway/Raleway-Thin.ttf') format('truetype');
+              font-weight: 100;
+              font-style: normal;
+            }
+
+            @font-face {
+              font-family: Raleway;
+              src: url('font/Raleway/Raleway-Regular.ttf') format('truetype');
+              font-weight: normal;
+              font-style: normal;
+            }
+
+            @font-face {
+              font-family: Raleway;
+              src: url('font/Raleway/Raleway-Italic.ttf') format('truetype');
+              font-weight: normal;
+              font-style: italic;
+            }
+
+            @font-face {
+              font-family: Raleway;
+              src: url('font/Raleway/Raleway-Bold.ttf') format('truetype');
+              font-weight: bold;
+              font-style: normal;
+            }
+
+            @font-face {
+              font-family: FontAwesome;
+              src: url('font/FontAwesome/fontawesome-webfont.ttf') format('truetype');
+              font-weight: normal;
+              font-style: normal;
+            }
+        </style>
     </head>
     <body>
         <div id="app"></div>
