--- a/src/client/templates/index.ejs
+++ b/src/client/templates/index.ejs
@@ -5,6 +5,13 @@
         <title><%= htmlWebpackPlugin.options.title %></title>
         <link rel="stylesheet" href="vendorStyles/fontAwesome.min.css" type="text/css">
         <style>
+            body {
+              padding: 0;
+              margin: 0;
+              outline: none;
+              text-decoration: none;
+              border: 0;
+            }
             @font-face {
               font-family: Raleway;
               src: url('font/Raleway/Raleway-Thin.ttf') format('truetype');
