--- a/src/client/templates/index.ejs
+++ b/src/client/templates/index.ejs
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="UTF-8">
-        <title><%= htmlWebpackPlugin.options.title %></title>
+        <title><%= title %></title>
         <link rel="stylesheet" href="vendorStyles/fontAwesome.min.css" type="text/css">
         <style>
             body {
@@ -51,5 +51,9 @@
     </head>
     <body>
         <div id="app"></div>
+        <script>
+            var reactSettings = "<%= encodeURIComponent(JSON.stringify(reactSettings)) %>";
+        </script>
+        <script type="text/javascript" src="bundle.js"></script></body>
     </body>
 </html>
